objects/tdc_cti__CTI_General_Setting__c/tdc_cti__CTI_General_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CTI General Setting</label>
</CustomObject>