objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Auto_create_lead__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Auto_create_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto create lead</label>
    <type>Checkbox</type>
</CustomField>