objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Call_Log_Subject_With_Label__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Log_Subject_With_Label__c</fullName>
    <label>Call Log Subject With Label</label>
    <type>TextArea</type>
</CustomField>