objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Missed_Call_Notification__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Missed_Call_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not in use.</description>
    <label>Missed Call Notification</label>
    <type>Checkbox</type>
</CustomField>